--- a/smartBank/package.json
+++ b/smartBank/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-local-auth": "^1.7.0",
+    "react-native-mask-text": "^0.14.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
